added mongoose and crud using mongoose

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 8000
+MONGO_URI = mongodb+srv://toahabhuiyan01:Asdfg1@cluster0.pagfy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
