--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.2.8"
   },
   "devDependencies": {
