added packages, environment updated

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV = development
 PORT = 8000
 MONGO_URI = mongodb+srv://toahabhuiyan01:Asdfg1@cluster0.pagfy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+JWT_SECRET = abc123
