added auth0 and receive data from social

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ NODE_ENV = development
 PORT = 8000
 MONGO_URI = mongodb+srv://toahabhuiyan01:Asdfg1@cluster0.pagfy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 JWT_SECRET = abc123
+
+ISSUER_BASE_URL=https://dev-qbubpor1.us.auth0.com
+CLIENT_ID=Tl47DpNxlEDb6duUPZKWAIwWChKONDJc
+BASE_URL=http://localhost:8000
+SECRET=hello-toaha
